[package]
name = "conductor"
version = "0.1.0"
authors = ["Kaitlyn Kenwell <redrield@gmail.com>"]
edition = "2018"
description = "A cross-platform driver station for FRC robots"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { git = "https://github.com/Boscop/web-view#82d7cbc.git" }
lazy_static = "1.5.0"
rust-embed = "8.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
ds = "1.2.4"
gilrs = "0.10.8"
actix-web = "4.8.0"
actix-rt = "2.10.0"
mime_guess = "2.0.5"
futures = "0.3.30"
env_logger = "0.11.3"
actix-web-actors = "4.3.0"
actix = "0.13.5"
log = "0.4.11"
conquer-once = "0.4.0"
uuid = { version = "1.10.0", features = ["v4"] }
confy = "0.6.1"
autopilot = "0.4.0"
tinyfiledialogs = "3.3.0"
human-panic = "2.0.0"
glfw = "0.57.0"

[patch.crates-io]
ds = { git = "https://github.com/spacey-sooty/ds-rs.git", branch = 'updatedeps' }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.74"
x11 = { version = "2.18.2", features = ["xlib", "xinput", "xrandr"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.74"
core-graphics = "0.21.0"
objc = "0.2.7"
cocoa = "0.23.0"
block = "0.1.6"
core-foundation = "0.9.0"

[package.metadata.bundle]
name = "Conductor"
identifier = "io.github.Redrield.Conductor"
copyright = "MPL-2"

[package.metadata.rpm]
package = "conductor"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
conductor = { path = "/usr/bin/conductor" }
